# cal

./: AndroidManifest.xml  Cargo.toml  README.md  build.rs  test.rs
src/: lib.rs
ui/: app-window.slint
